# dropbox-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  tsconfig.json  vitest.config.ts
.claude-plugin/: plugin.json
bundle/: index.mjs
docs/superpowers/plans/: 2026-05-21-dropbox-mcp-typescript-conversion.md
docs/superpowers/specs/: 2026-05-21-dropbox-mcp-typescript-conversion-design.md
skills/dropbox/: README.md  SKILL.md
skills/dropbox/scripts/: categorize.py  dbx_sync.py  dbx_sync_misc_e2e_dropbox_test_recursive_dryrun.json  execute.py  reconcile_cloud_dupes.py  sync_final_followups.py
src/: dropbox.ts  format.ts  index.ts  tools.ts
tests/: dropbox.test.ts  format.test.ts  handlers-mutating.test.ts  handlers-readonly.test.ts  smoke.test.ts  tools-defs.test.ts
